Kubernetes/Servers/LAMP/php-fpm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    traefik.enable: "false"
  creationTimestamp: null
  labels:
    io.kompose.service: php-fpm
  name: php-fpm
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: php-fpm
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
        traefik.enable: "false"
      creationTimestamp: null
      labels:
        io.kompose.network/proxy.: "true"
        io.kompose.service: php-fpm
    spec:
      containers:
        - image: php-fpm
          name: -php-fpm
          ports:
            - containerPort: 9000
          resources: {}
          volumeMounts:
            - mountPath: /var/www
              name: php-fpm-claim0
            - mountPath: /var/www/docker
              name: php-fpm-claim1
            - mountPath: /var/www/mysql
              name: php-fpm-claim2
            - mountPath: /usr/local/etc/php/conf.d/99-overrides.ini
              name: php-fpm-claim3
      restartPolicy: Always
      volumes:
        - name: php-fpm-claim0
          persistentVolumeClaim:
            claimName: php-fpm-claim0
        - name: php-fpm-claim1
          persistentVolumeClaim:
            claimName: php-fpm-claim1
        - name: php-fpm-claim2
          persistentVolumeClaim:
            claimName: php-fpm-claim2
        - name: php-fpm-claim3
          persistentVolumeClaim:
            claimName: php-fpm-claim3
status: {}
