Kubernetes/Servers/LAMP/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    traefik.backend: pma
    traefik.frontend.rule: Host:www.pma.,pma.
    traefik.port: "80"
  creationTimestamp: null
  labels:
    io.kompose.service: phpmyadmin
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: phpmyadmin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
        traefik.backend: pma
        traefik.frontend.rule: Host:www.pma.,pma.
        traefik.port: "80"
      creationTimestamp: null
      labels:
        io.kompose.network/proxy.: "true"
        io.kompose.service: phpmyadmin
    spec:
      containers:
        - env:
            - name: PMA_HOST
              value: mysql
          image: phpmyadmin/phpmyadmin
          name: -phpmyadmin
          resources: {}
      restartPolicy: Always
status: {}
