Kubernetes/Servers/LAMP/portainer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    traefik.backend: portainer
    traefik.frontend.rule: Host:www.portainer.,portainer.
    traefik.port: "9000"
  creationTimestamp: null
  labels:
    io.kompose.service: portainer
  name: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: portainer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
        traefik.backend: portainer
        traefik.frontend.rule: Host:www.portainer.,portainer.
        traefik.port: "9000"
      creationTimestamp: null
      labels:
        io.kompose.network/proxy.: "true"
        io.kompose.service: portainer
    spec:
      containers:
        - image: portainer/portainer
          name: -portainer
          resources: {}
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: portainer-claim0
            - mountPath: /data
              name: portainer-claim1
      restartPolicy: Always
      volumes:
        - name: portainer-claim0
          persistentVolumeClaim:
            claimName: portainer-claim0
        - name: portainer-claim1
          persistentVolumeClaim:
            claimName: portainer-claim1
status: {}
