Kubernetes/Servers/LAMP/php-fpm-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    traefik.enable: "false"
  creationTimestamp: null
  labels:
    io.kompose.service: php-fpm
  name: php-fpm
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: php-fpm
status:
  loadBalancer: {}
