Kubernetes/Servers/LAMP/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    traefik.backend: traefik
    traefik.frontend.rule: Host:www.traefik.,traefik.
    traefik.port: "8080"
  creationTimestamp: null
  labels:
    io.kompose.service: traefik
  name: traefik
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: traefik
status:
  loadBalancer: {}
