Kubernetes/Servers/LAMP/proxy.-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: proxy.
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/proxy.: "true"
  podSelector:
    matchLabels:
      io.kompose.network/proxy.: "true"
